# nai2hta

./: README.md  nai2hta.py  pyproject.toml
nai2hta/: __init__.py  __main__.py  prompt.py
nai2hta/tests/: test_prompt.py
